# graphics-starter-project

./: .gitmodules  CMakeLists.txt
assets/: CMakeLists.txt
shaders/: CMakeLists.txt  basic.frag  basic.vert  changed.frag  changed.vert  gltf.vert  gltf_gpu.frag  gltf_gpu.vert
src/: CMakeLists.txt  Logger.cpp  Logger.h  Model.cpp  Model.h  Window.cpp  Window.h  glad.cpp  main.cpp
src/glad/: glad.h
src/model/: GltfModel.cpp  GltfModel.h  GltfNode.cpp  GltfNode.h
src/opengl/: CMakeLists.txt  FrameBuffer.cpp  FrameBuffer.h  OGLRenderData.cpp  OGLRenderData.h  OGLRenderer.cpp  OGLRenderer.h  Shader.cpp  Shader.h  ShaderStorageBuffer.cpp  ShaderStorageBuffer.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  UserInterface.cpp  UserInterface.h  VertexBuffer.cpp  VertexBuffer.h
src/tools/: Camera.cpp  Camera.h  Timer.cpp  Timer.h
textures/: CMakeLists.txt
